[tool.poetry]
name = "max4live-pyodide"
version = "0.1.0"
description = ""
authors = ["Hugo <hugo.evers@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "max4live_pyodide"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
ipykernel = "^6.9.1"
pylint = "^2.12.2"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^5.0.4"
ipython = "^7.0.0"
isort = "^5.10.1"
safety = "^1.10.3"
friendly = "^0.5.19"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.9"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-drawio-exporter = "^0.8.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
